--- a/courses.html
+++ b/courses.html
@@ -68,7 +68,7 @@
                     </div>
                     <a href="contact.html" class="nav-item nav-link">Contact</a>
                 </div>
-                <a href="" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">Join Now<i
+                <a href="" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">Enroll Now<i
                         class="fa fa-arrow-right ms-3"></i></a>
             </div>
         </nav>
@@ -172,7 +172,7 @@
                                     <a href="#" class="flex-shrink-0 btn btn-sm btn-primary px-3 border-end"
                                         style="border-radius: 30px 0 0 30px;">Read More</a>
                                     <a href="#" class="flex-shrink-0 btn btn-sm btn-primary px-3"
-                                        style="border-radius: 0 30px 30px 0;">Join Now</a>
+                                        style="border-radius: 0 30px 30px 0;">Enroll Now</a>
                                 </div>
                             </div>
                             <div class="text-center p-4 pb-0">
@@ -206,7 +206,7 @@
                                     <a href="#" class="flex-shrink-0 btn btn-sm btn-primary px-3 border-end"
                                         style="border-radius: 30px 0 0 30px;">Read More</a>
                                     <a href="#" class="flex-shrink-0 btn btn-sm btn-primary px-3"
-                                        style="border-radius: 0 30px 30px 0;">Join Now</a>
+                                        style="border-radius: 0 30px 30px 0;">Enroll Now</a>
                                 </div>
                             </div>
                             <div class="text-center p-4 pb-0">
@@ -240,7 +240,7 @@
                                     <a href="#" class="flex-shrink-0 btn btn-sm btn-primary px-3 border-end"
                                         style="border-radius: 30px 0 0 30px;">Read More</a>
                                     <a href="#" class="flex-shrink-0 btn btn-sm btn-primary px-3"
-                                        style="border-radius: 0 30px 30px 0;">Join Now</a>
+                                        style="border-radius: 0 30px 30px 0;">Enroll Now</a>
                                 </div>
                             </div>
                             <div class="text-center p-4 pb-0">
