--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
         <meta content="" name="description">
 
         <!-- Favicon -->
-        <link href="img/favicon.ico" rel="icon">
+        <link href="img/logo.png" rel="icon">
 
         <!-- Google Web Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -372,6 +372,7 @@
 
         <!-- Template Javascript -->
         <script src="js/main.js"></script>
+
     </body>
 
 </html>
